# Coding-Question-Evaluation_with_LLM

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  clients.py  evaluate_coding.py  schemas.py
src/core/: __init__.py  config.py  manager.py
src/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  huggingface_provider.py  openai_provider.py
src/tests/: test_parse.py  test_provider_factory.py
src/utils/: helpers.py  parse.py
