[project]
name = "llm-agnostic-eval-coding"
version = "0.1.0"
description = "Generic LLM-based coding question evaluator"
authors = [ {name = "AutoGen"} ]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "openai",
    "anthropic",
    "google-genai",
    "requests",
    "pydantic>=2.0",
    "pandas",
    "tqdm",
    "python-dotenv",
]

[project.scripts]
evaluate-coding = "evaluate_coding:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
